# triton

./: .cursorrules
active_inference/: Makefile  README.md  pyproject.toml  run_all_examples.py  run_all_tests.py
active_inference/.github/workflows/: ci.yml
active_inference/docs/: README.md  TRITON_USAGE_GUIDE.md  api.md  bayesian_filtering.md  examples.md  neural_components.md  optimization_methods.md  sampling_methods.md  temporal_inference.md  theory.md  uv_workflow.md
active_inference/examples/: README.md  basic_inference.py  basic_triton_demo.py  bayesian_core_demo.py  free_energy_minimization.py  message_passing_demo.py  policy_selection.py  pomdp_gridworld.py  pomdp_gridworld_backup.py  simple_triton_demo.py  triton_active_inference_demo.py  triton_benchmark.py  triton_improvements_demo.py  visualization_demo.py
active_inference/outputs/: acceleration_performance_report.txt  comprehensive_test_report.json  test_numerical_data.json  test_performance_metrics.csv
active_inference/outputs/basic_triton/: active_inference_simulation.json  basic_triton_results.json  performance_comparison.json
active_inference/outputs/pomdp_gridworld/: belief_evolution_raw_data.json  belief_report.json  performance_dashboard_raw_data.json  performance_report.json  pomdp_simulation_results.json  simulation_summary.json  trajectory_analysis_raw_data.json  trajectory_data.csv  trajectory_evolution_raw_data.json  trajectory_report.json
active_inference/scripts/: run_comprehensive_analysis.py  setup_activate_uv.sh
active_inference/src/: __init__.py  active_inference_agent.py  bayesian_core.py  bayesian_filtering.py  core.py  free_energy.py  inference.py  message_passing.py  neural_components.py  optimization_methods.py  pomdp_active_inference.py  pomdp_environment.py  sampling_methods.py  temporal_inference.py  triton_analysis_demo.py  triton_coverage.py  validate_triton_usage.py  visualization_utils.py
active_inference/tests/: __init__.py  conftest.py  test_active_inference_agent.py  test_basic_triton.py  test_bayesian_core.py  test_bayesian_filtering.py  test_core.py  test_free_energy.py  test_inference.py  test_message_passing.py  test_neural_components.py  test_optimization_methods.py  test_pomdp_environment.py  test_sampling_methods.py  test_temporal_inference.py  test_triton_capabilities.py  test_triton_integration.py  test_triton_validation.py  test_visualization_utils.py
active_inference/triton_active_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/triton_kernels/triton_kernels/: matmul_ogs.py  roofline.py
python/triton_kernels/triton_kernels/matmul_ogs_details/: _common.py  _p_matmul_ogs.py
